# 11-Side-Projects

./: .gitignore  README.md  pyproject.toml
01 RAG For Articles/: .env.example  DATA_PIPELINE.md  EVALUATION.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  RANKING_VS_RERANKING.md  README.md  RERANKING_IMPLEMENTATION.md  SEARCH_STRATEGIES_COMPARISON.md  app.py  debugger.ipynb  pyproject.toml  requirements.txt  test_dedup_simple.py  test_search.py
01 RAG For Articles/data/: articles.json  evaluation_questions.json  evaluation_responses.json  evaluation_results_20260313_164146.json
01 RAG For Articles/infra/: bootstrap.py  state.py
01 RAG For Articles/notebook/: Runner.ipynb  fetch_delta_data.ipynb  fetch_delta_data.py  reranker_evaluation.ipynb
01 RAG For Articles/scripts/: deploy_to_databricks.sh  download_articles.py  fetch_from_databricks.py  fix_urls.py  generate_eval_questions.py  setup_databricks.sh
01 RAG For Articles/src/: data_loader.py  evaluation.py  rag_loader.py
02 RAG For Apple & Tesla/: .gitignore  DESIGN.md  READ.ME  README.md  design_report.md  main.py  pyproject.toml
02 RAG For Apple & Tesla/data/vector_index/: chunks.pkl  metadata.pkl
02 RAG For Apple & Tesla/notebooks/: demo.ipynb
02 RAG For Apple & Tesla/notebooks/data/vector_index/: chunks.pkl
02 RAG For Apple & Tesla/outputs/: notebook_results.json
02 RAG For Apple & Tesla/src/: config.py  evaluation.py  main.py
02 RAG For Apple & Tesla/src/config/: __int__.py  settings.py
02 RAG For Apple & Tesla/src/document_processor/: __init__.py  chunker.py  pdf_parser.py
02 RAG For Apple & Tesla/src/embeddings/: __init__.py  embedding_generator.py
02 RAG For Apple & Tesla/src/models/: schemas.py
02 RAG For Apple & Tesla/src/pipeline/: rag_pipeline.py
02 RAG For Apple & Tesla/src/rag_4_finance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
02 RAG For Apple & Tesla/src/services/: chunker.py  document_processor.py  embedding_service.py  llm_service.py  retriever.py  vector_store.py
